--- a/src/styles.css
+++ b/src/styles.css
@@ -8,9 +8,17 @@ body {
   margin: 0 auto;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .grid {
   display: grid;
   grid-gap: 64px;
+}
+
+.img-responsive {
+  max-width: 100%;
 }
 
 .grid-2-columns {
@@ -21,14 +29,45 @@ body {
   grid-template-columns: 1fr 2fr 2fr;
 }
 
-.img-responsive {
-  max-width: 100%;
+.grid-3-columns {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.card {
+  background: white;
+  margin: 30px 0;
+}
+
+.card-body {
+  padding: 30px;
+}
+
+.card-footer {
+  padding: 0 30px 30px;
+}
+
+.btn {
+  display: block;
+  color: white;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  padding: 16px;
+  background-color: #462cb3;
+  text-decoration: none;
 }
 
 section {
-  max-width: 1200px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 100px 0;
+  padding: 100px;
+}
+
+section .secondary {
+  background: #f8f8f8;
 }
 
 header {
@@ -111,6 +150,26 @@ main p {
   color: #272044;
   opacity: 0.7;
   margin-top: 0;
+}
+
+main h4 {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.5px;
+  white-space: nowrap;
+}
+
+main h5 {
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 20px;
+  margin: 0;
+}
+
+.cafes {
+  width: 185px;
+  height: 185px;
+  max-width: 100%;
 }
 
 footer {
